examples/test/testpolicy17534.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17534
  namespace: namespace36
spec:
  podSelector:
    matchLabels:
      key42: value1
      key26: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value13
          key39: value45
      podSelector:
        matchLabels:
          key25: value46
